fixed alignment

--- a/dticket/static/less/freelancer.less
+++ b/dticket/static/less/freelancer.less
@@ -466,6 +466,7 @@ footer {
 
 header {
 	background-color: @primary;
+
 	.container-fluid {
 		padding-top: 30px;
 
@@ -492,6 +493,10 @@ header {
 		.btn {
 			margin-bottom:3px;
 			max-width: 108px;
+		}
+
+		.intro-text .skills {
+			font-size: 1.5em;
 		}
 
 /*		.btn-success {
@@ -536,11 +541,14 @@ hr.ticket-primary:after {
 
 hr.ticket-icon {
     border-color: white;
+	margin: 15px auto 5px;
 }
 
 hr.ticket-icon:after {
     color: white;
 	background-color: @primary;
+	font-size: 1.5em;
+	padding: 0 5px;
 }
 
 hr.ticket-primary {
